--- a/CSS/master.css
+++ b/CSS/master.css
@@ -11,17 +11,54 @@ body{
 }
 h1{
   font-family: 'Russo One', sans-serif;
-  margin-top: 0;
-  padding: 40px;
+  margin: 0;
   font-size: 50px;
   color: white;
   text-align: center;
 }
+header{
+  background-color: rgb(224, 13, 13);
+}
+.header{
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+.logo{
+  display: flex;
+  align-items: center;
+}
+h1, nav, header ul{
+  display: inline-block;
+}
+.nombre input{
+  font-size: 30px;
+text-align: center;
+line-height: 34px;
+font-family: 'Ubuntu', sans-serif;
+width: 100%;
+}
+.nombre label{
+  display: block;
+  text-align: center;
+}
+input{
+  border-radius: 8px;
+  width: 85%;
+  text-align: center;
+  font-size: 20px;
+}
+.equipo-final{
+margin: 5px 0;
+border-bottom: 2px solid white;
+width: 85%;
+}
+
 
 .marcador{
   background-image: url("../images/estadio1.jpg");
   background-size: cover;
-  height: 100vh;
+  height: 800px;
 }
 .contenedor{
   width: 100%;
@@ -31,7 +68,7 @@ h1{
 .transparencia{
   width: 100%;
   height: 100%;
-  background: radial-gradient(rgba(236, 41, 41,0.2),rgba(236, 41, 41,0.8));
+  background: rgba(0, 0, 0,0.5);
 
 }
 form{
@@ -50,4 +87,13 @@ form{
 display: flex;
 justify-content: space-between;
 align-items: center;
+}
+.caja label{
+  font-size: 20px;
+}
+.botton{
+  background-color: rgba(225, 187, 0, 1);
+  border: none;
+  padding: 8px 16px;
+  width: auto;
 }
