--- a/CSS/master.css
+++ b/CSS/master.css
@@ -2,7 +2,8 @@
   border: 1px solid red;
 } */
 /* font-family: 'Ubuntu', sans-serif;
-font-family: 'Russo One', sans-serif; */
+font-family: 'Russo One', sans-serif;
+font-family: 'Parisienne', cursive; */
 body{
   margin: 0;
   font-family: 'Ubuntu', sans-serif;
@@ -17,7 +18,11 @@ h1{
   text-align: center;
 }
 header{
-  background-color: rgb(224, 13, 13);
+background-color: rgb(224, 13, 13);
+position: fixed;
+margin-top: -50px;
+width: 100%;
+z-index: 1;
 }
 .header{
   display: flex;
@@ -31,6 +36,48 @@ header{
 h1, nav, header ul{
   display: inline-block;
 }
+.portada {
+  background-image: url(../images/moscu.jpg);
+  background-size: cover;
+  width: 100%;
+  height: 613px;
+  margin-top: 50px;
+}
+.portada .transparencia{
+  background-color:  rgba(255, 0, 0, 0.5);
+}
+.titulo{
+position: absolute;
+top: 50%;
+right: 5%;
+text-align: right;
+font-size: 46px;
+}
+.titulo-1{
+  font-family: 'Russo One', sans-serif;
+}
+.titulo-2{
+  font-family: 'Parisienne',sans-serif;
+  font-size: 56px;
+}
+.marcador{
+  background-image: url("../images/estadio1.jpg");
+  background-size: cover;
+  height:100%;
+}
+.contenedor{
+  width: 100%;
+  max-width: 800px;
+  margin: 0px auto;
+  padding: 20px 0;
+}
+.transparencia{
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0,0.5);
+
+}
+
 .nombre input{
   font-size: 30px;
 text-align: center;
@@ -46,7 +93,7 @@ input{
   border-radius: 8px;
   width: 85%;
   text-align: center;
-  font-size: 20px;
+  font-size: 16px;
 }
 .equipo-final{
 margin: 5px 0;
@@ -55,22 +102,6 @@ width: 85%;
 }
 
 
-.marcador{
-  background-image: url("../images/estadio1.jpg");
-  background-size: cover;
-  height: 800px;
-}
-.contenedor{
-  width: 100%;
-  max-width: 800px;
-  margin: 0px auto;
-}
-.transparencia{
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0,0.5);
-
-}
 form{
   display: flex;
     flex-direction: column;
@@ -97,3 +128,39 @@ align-items: center;
   padding: 8px 16px;
   width: auto;
 }
+/* programacion */
+.programacion{
+  background-image: url("../images/estadio2.jpg");
+  background-size: cover;
+}
+.programacion h2{
+margin: 0;
+padding: 69px 0 30px;
+text-align: center;
+font-family: 'Russo One', sans-serif;
+}
+
+.partidos{
+  font-size: 20px;
+  display: flex;
+  justify-content: center;
+}
+.grupos{
+  min-width: 160px;
+}
+table {
+  margin: 0 auto;
+}
+thead{
+  background-color: rgba(255, 0, 0, 0.5);
+}
+tbody{
+  background-color: rgba(66, 66, 96, 0.5);
+}
+th{
+padding: 6px 14px;
+}
+td{
+margin: 5px;
+}
+/* programacion */
