--- a/CSS/master.css
+++ b/CSS/master.css
@@ -17,11 +17,15 @@ h1{
   color: white;
   text-align: center;
 }
+a{
+  text-decoration: none;
+  color: white;
+}
 header{
 background-color: rgb(224, 13, 13);
 position: fixed;
 margin-top: -50px;
-width: 100%;
+width: 100vw;
 z-index: 1;
 }
 .header{
@@ -29,7 +33,7 @@ z-index: 1;
   align-items: center;
   justify-content: space-around;
 }
-.logo{
+.logo a{
   display: flex;
   align-items: center;
 }
@@ -40,7 +44,7 @@ h1, nav, header ul{
   background-image: url(../images/moscu.jpg);
   background-size: cover;
   width: 100%;
-  height: 613px;
+  height: 665px;
   margin-top: 50px;
 }
 .portada .transparencia{
@@ -124,13 +128,29 @@ align-items: center;
 .match{
   background-image: url("../images/soccer-2.jpg");
   background-size: cover;
-  height:100%;
+  height:650px;
+}
+.match .formulario{
+  margin-top: 14%;
+}
+.equipo{
+  margin:0 20px;
+  display: flex;
+  flex-direction: column;
+ text-align: center;
 }
 .equipo img {
     width: 300px;
+    height: 200px;
     display: flex;
   }
+.equipo label{
+  margin-top: 20px;
+}
 
+.match .caja{
+  margin: 40px 0;
+}
 .caja label{
   font-size: 20px;
 }
@@ -148,7 +168,7 @@ align-items: center;
 }
 .programacion h2{
 margin: 0;
-padding: 69px 0 30px;
+padding: 12% 0 30px;
 text-align: center;
 font-family: 'Russo One', sans-serif;
 }
@@ -160,6 +180,11 @@ font-family: 'Russo One', sans-serif;
 }
 .grupos{
   min-width: 160px;
+}
+.programacion .tabla{
+  height: 410px;
+  overflow: overlay;
+  margin-bottom: 25px;
 }
 table {
   margin: 0 auto;
@@ -184,7 +209,7 @@ margin: 5px;
 background-image: url("../images/soccer-ball.jpg");
 background-size: cover;
 background-position: center;
-height: 300px;
+height: 600px;
 }
 .ranking table{
   width: 100%;
@@ -192,6 +217,7 @@ height: 300px;
 }
 .ranking h2{
   text-align: center;
+  margin-top: 14%;
 }
 /* ranking */
 /* footer */
