--- a/CSS/master.css
+++ b/CSS/master.css
@@ -56,6 +56,7 @@ h1{
 a{
   text-decoration: none;
   color: white;
+  cursor: pointer;
 }
 header{
 background-color: rgb(224, 13, 13);
@@ -72,6 +73,7 @@ z-index: 1;
 .logo a{
   display: flex;
   align-items: center;
+  cursor: pointer;
 }
 h1, nav, header ul{
   display: inline-block;
@@ -90,14 +92,15 @@ h1, nav, header ul{
   top: 6px;
   left: 9px;
   display: none;
+  cursor: pointer;
 }
 .portada {
   background-image: url(../images/moscu.jpg);
   background-size: cover;
-  position: relative;
   width: 100%;
   height: 665px;
   margin-top: 50px;
+  position: relative;
 }
 .portada .transparencia{
   background-color:  rgba(255, 0, 0, 0.5);
@@ -145,11 +148,132 @@ width: 100%;
   display: block;
   text-align: center;
 }
-input{
+input, select {
   border-radius: 8px;
   width: 85%;
   text-align: center;
   font-size: 16px;
+}
+.grid{
+  display: grid;
+  grid-template-columns: repeat(8, 1fr);
+  grid-template-areas:"grupoA grupoB grupoC grupoD grupoE grupoF grupoG grupoH"
+                      "grupo2B grupo2A grupo2D grupo2C grupo2F grupo2E grupo2H grupo2G"
+                      "cuartos_1 cuartos_2 cuartos_3 cuartos_4 cuartos_5 cuartos_6 cuartos_7 cuartos_8"
+                      "semifinalista_1 semifinalista_1 semifinalista_3 semifinalista_3 semifinalista_2 semifinalista_2 semifinalista_4 semifinalista_4"
+                      ". finalista_3 finalista_3 . . finalista_4 finalista_4 . "
+                      ". finalista_1 finalista_1 . . finalista_2 finalista_2 . "
+                      ". . . campeon campeon . . ."
+                      ". . . enviar enviar . . .";
+  text-align: center;
+  justify-content: center;
+  align-content: center;
+  justify-items: center;
+  margin: 4% 0;
+}
+.grupoA{
+  grid-area: grupoA;
+}
+.grupo2A{
+  grid-area: grupo2A;
+  grid-row-gap: 10px;
+}
+.grupoB{
+grid-area: grupoB;
+}
+.grupo2B{
+grid-area: grupo2B;
+}
+.grupoC{
+grid-area: grupoC;
+}
+.grupo2C{
+grid-area: grupo2C;
+}
+.grupoD{
+grid-area: grupoD;
+}
+.grupo2D{
+grid-area: grupo2D;
+}
+.grupoE{
+grid-area: grupoE;
+}
+.grupo2E{
+grid-area: grupo2E;
+}
+.grupoF{
+grid-area: grupoF;
+}
+.grupo2F{
+grid-area: grupo2F;
+}
+.grupoG{
+grid-area: grupoG;
+}
+.grupo2G{
+grid-area: grupo2G;
+}
+.grupoH{
+grid-area: grupoH;
+}
+.grupo2H{
+grid-area: grupo2H;
+}
+.cuartos_1{
+grid-area: cuartos_1;
+}
+.cuartos_2{
+grid-area: cuartos_2;
+}
+.cuartos_3{
+grid-area: cuartos_3;
+}
+.cuartos_4{
+grid-area: cuartos_4;
+}
+.cuartos_5{
+grid-area: cuartos_5;
+}
+.cuartos_6{
+grid-area: cuartos_6;
+}
+.cuartos_7{
+grid-area: cuartos_7;
+}
+.cuartos_8{
+grid-area: cuartos_8;
+}
+.semifinalista_1{
+grid-area: semifinalista_1;
+}
+.semifinalista_2{
+grid-area: semifinalista_2;
+}
+.semifinalista_3{
+grid-area: semifinalista_3;
+}
+.semifinalista_4{
+grid-area: semifinalista_4;
+}
+.finalista_1{
+grid-area: finalista_1;
+}
+.finalista_2{
+grid-area: finalista_2;
+}
+.finalista_3{
+grid-area: finalista_3;
+}
+.finalista_4{
+grid-area: finalista_4;
+}
+.campeon{
+grid-area: campeon;
+}
+.enviar{
+  grid-area: enviar;
+  margin-top: 20px;
 }
 .equipo-final{
 margin: 5px 0;
@@ -370,23 +494,158 @@ header nav{
   height: 100vh;
   background: rgba(224, 13, 13,.8);
   left: -100%;
-  padding-top: 72px;
+  display: flex;
+flex-direction: column;
+justify-content: center;
+transition: 1s;
   }
   header ul {
 font-size: 42px;
-padding: 0;
-margin: 65px 0;
+padding: 30px 0;
 border-bottom: 1px solid;
   }
   .portada {
     margin-top: 0;
     background-position: top;
     height: 402px;
+    position:static;
   }
+
   .titulo{
   position: static;
   padding-top: 18px;
   font-size: 31px;
+  }
+  .grid{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-areas:"grupoA grupoA grupo2B grupo2B"
+                        "grupoB grupoB grupo2A grupo2A"
+                        "grupoC grupoC grupo2D grupo2D"
+                        "grupoD grupoD grupo2C grupo2C"
+                        "grupoE grupoE grupo2F grupo2F"
+                        "grupoF grupoF grupo2E grupo2E"
+                        "grupoG grupoG grupo2H grupo2H"
+                        "grupoH grupoH grupo2G grupo2G"
+                        "cuartos_1 cuartos_1 cuartos_2 cuartos_2"
+                        "cuartos_3 cuartos_3 cuartos_4 cuartos_4"
+                        "cuartos_5 cuartos_5 cuartos_6 cuartos_6"
+                        "cuartos_7 cuartos_7 cuartos_8 cuartos_8"
+                        "semifinalista_1 semifinalista_1 semifinalista_2 semifinalista_2"
+                        "semifinalista_3 semifinalista_3 semifinalista_4 semifinalista_4"
+                        "finalista_3 finalista_3 finalista_4 finalista_4"
+                        "finalista_1 finalista_1 finalista_2 finalista_2"
+                        ". campeon campeon ."
+                        ". enviar enviar .";
+    text-align: center;
+    justify-content: center;
+    align-content: center;
+    justify-items: center;
+    margin: 4% 0;
+  }
+  .grupoA{
+    grid-area: grupoA;
+  }
+  .grupo2A{
+    grid-area: grupo2A;
+    grid-row-gap: 10px;
+  }
+  .grupoB{
+  grid-area: grupoB;
+  }
+  .grupo2B{
+  grid-area: grupo2B;
+  }
+  .grupoC{
+  grid-area: grupoC;
+  }
+  .grupo2C{
+  grid-area: grupo2C;
+  }
+  .grupoD{
+  grid-area: grupoD;
+  }
+  .grupo2D{
+  grid-area: grupo2D;
+  }
+  .grupoE{
+  grid-area: grupoE;
+  }
+  .grupo2E{
+  grid-area: grupo2E;
+  }
+  .grupoF{
+  grid-area: grupoF;
+  }
+  .grupo2F{
+  grid-area: grupo2F;
+  }
+  .grupoG{
+  grid-area: grupoG;
+  }
+  .grupo2G{
+  grid-area: grupo2G;
+  }
+  .grupoH{
+  grid-area: grupoH;
+  }
+  .grupo2H{
+  grid-area: grupo2H;
+  }
+  .cuartos_1{
+  grid-area: cuartos_1;
+  }
+  .cuartos_2{
+  grid-area: cuartos_2;
+  }
+  .cuartos_3{
+  grid-area: cuartos_3;
+  }
+  .cuartos_4{
+  grid-area: cuartos_4;
+  }
+  .cuartos_5{
+  grid-area: cuartos_5;
+  }
+  .cuartos_6{
+  grid-area: cuartos_6;
+  }
+  .cuartos_7{
+  grid-area: cuartos_7;
+  }
+  .cuartos_8{
+  grid-area: cuartos_8;
+  }
+  .semifinalista_1{
+  grid-area: semifinalista_1;
+  }
+  .semifinalista_2{
+  grid-area: semifinalista_2;
+  }
+  .semifinalista_3{
+  grid-area: semifinalista_3;
+  }
+  .semifinalista_4{
+  grid-area: semifinalista_4;
+  }
+  .finalista_1{
+  grid-area: finalista_1;
+  }
+  .finalista_2{
+  grid-area: finalista_2;
+  }
+  .finalista_3{
+  grid-area: finalista_3;
+  }
+  .finalista_4{
+  grid-area: finalista_4;
+  }
+  .campeon{
+  grid-area: campeon;
+  }
+  .enviar{
+    grid-area: enviar;
+    margin-top: 20px;
   }
   .match{
     height: 565px;
