--- a/CSS/master.css
+++ b/CSS/master.css
@@ -124,6 +124,7 @@ font-size: 46px;
   background-image: url("../images/estadio1.jpg");
   background-size: cover;
   height:100%;
+  padding:20px 0;
 }
 .contenedor{
   width: 100%;
@@ -135,6 +136,7 @@ font-size: 46px;
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0,0.5);
+  padding: 20px 0;
 
 }
 
@@ -324,7 +326,7 @@ align-items: center;
 .match{
   background-image: url("../images/soccer-2.jpg");
   background-size: cover;
-  height:650px;
+  /* height:650px; */
 }
 .match .formulario{
   margin-top: 14%;
@@ -410,7 +412,7 @@ margin: 5px;
 background-image: url("../images/soccer-ball.jpg");
 background-size: cover;
 background-position: center;
-height: 600px;
+/* height: 600px; */
 }
 .ranking table{
   width: 100%;
@@ -418,7 +420,6 @@ height: 600px;
 }
 .ranking h2{
   text-align: center;
-  margin-top: 14%;
 }
 /* ranking */
 /* footer */
@@ -571,9 +572,9 @@ border-bottom: 1px solid;
   padding-top: 18px;
   font-size: 31px;
   }
-  .match{
+  /* .match{
     height: 565px;
-  }
+  } */
   .match .formulario{
     margin-top: 41%;
   }
