--- a/CSS/mundial.css
+++ b/CSS/mundial.css
@@ -1,6 +1,6 @@
-*{
+/* *{
   border: 1px solid red;
-}
+} */
 /* font-family: 'Ubuntu', sans-serif;
 font-family: 'Russo One', sans-serif;
 font-family: 'Parisienne', cursive; */
@@ -65,6 +65,7 @@ margin-top: -50px;
 width: 100vw;
 z-index: 1;
 }
+
 .header{
   display: flex;
   align-items: center;
@@ -123,6 +124,7 @@ font-size: 46px;
   background-image: url("../images/estadio1.jpg");
   background-size: cover;
   height:100%;
+  /* padding:20px 0; */
 }
 .contenedor{
   width: 100%;
@@ -134,6 +136,7 @@ font-size: 46px;
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0,0.5);
+  /* padding: 20px 0; */
 
 }
 
@@ -143,6 +146,9 @@ text-align: center;
 line-height: 34px;
 font-family: 'Ubuntu', sans-serif;
 width: 100%;
+}
+.nombre{
+ margin-top: 50px;
 }
 .nombre label{
   display: block;
@@ -154,7 +160,7 @@ input, select {
   text-align: center;
   font-size: 16px;
 }
-.grid{
+/* .grid{
   display: grid;
   grid-template-columns: repeat(8, 1fr);
   grid-template-areas:"grupoA grupoB grupoC grupoD grupoE grupoF grupoG grupoH"
@@ -274,11 +280,24 @@ grid-area: campeon;
 .enviar{
   grid-area: enviar;
   margin-top: 20px;
+} */
+.grid{
+  font-size: 20px;
+}
+.grupo-1, .grupo-2, .fase-cuartos, .semifinalistas, .finalistas-3-4, .finalistas, .campeon {
+display: flex;
+text-align: center;
+justify-content: center;
+}
+.fase-grupos, .fase-cuartos, .semifinalistas, .finalistas-3-4, .finalistas, .campeon{
+  margin: 33px 0;
 }
 .equipo-final{
 margin: 5px 0;
-border-bottom: 2px solid white;
-width: 85%;
+}
+.enviar-1{
+  display: block;
+  margin: 10px auto;
 }
 
 
@@ -287,9 +306,8 @@ form{
     flex-direction: column;
     align-items: center;
 }
-.enviar{
-  width: 150px;
-}
+
+
 .equipo img {
   width: 300px;
   display: flex;
@@ -301,13 +319,24 @@ align-items: center;
 }
 
 /* match */
+.match img, .programacion img{
+  opacity: 0;
+  transition: 2500ms;
+}
+.match .b-loaded, .programacion .b-loaded{
+  opacity: 1;
+}
 .match{
   background-image: url("../images/soccer-2.jpg");
   background-size: cover;
-  height:650px;
+  /* height:650px; */
+}
+.match h2{
+text-align: center;
+margin-bottom: 0;
 }
 .match .formulario{
-  margin-top: 14%;
+  margin-top: 5%;
 }
 .equipo{
   margin:0 20px;
@@ -390,7 +419,7 @@ margin: 5px;
 background-image: url("../images/soccer-ball.jpg");
 background-size: cover;
 background-position: center;
-height: 600px;
+/* height: 600px; */
 }
 .ranking table{
   width: 100%;
@@ -398,7 +427,6 @@ height: 600px;
 }
 .ranking h2{
   text-align: center;
-  margin-top: 14%;
 }
 /* ranking */
 /* footer */
@@ -433,6 +461,38 @@ font-size: 35px;
   text-align: center;
   margin: 15px auto;
 }
+.grupo-1, .grupo-2, .fase-cuartos, .semifinalistas, .finalistas-3-4, .finalistas, .campeon {
+flex-wrap: wrap;
+}
+/* .grid{
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-areas:"grupoA grupoA grupo2B grupo2B"
+                      "grupoB grupoB grupo2A grupo2A"
+                      "grupoC grupoC grupo2D grupo2D"
+                      "grupoD grupoD grupo2C grupo2C"
+                      "grupoE grupoE grupo2F grupo2F"
+                      "grupoF grupoF grupo2E grupo2E"
+                      "grupoG grupoG grupo2H grupo2H"
+                      "grupoH grupoH grupo2G grupo2G"
+                      "cuartos_1 cuartos_1 cuartos_2 cuartos_2"
+                      "cuartos_3 cuartos_3 cuartos_4 cuartos_4"
+                      "cuartos_5 cuartos_5 cuartos_6 cuartos_6"
+                      "cuartos_7 cuartos_7 cuartos_8 cuartos_8"
+                      "semifinalista_1 semifinalista_1 semifinalista_2 semifinalista_2"
+                      "semifinalista_3 semifinalista_3 semifinalista_4 semifinalista_4"
+                      "finalista_3 finalista_3 finalista_4 finalista_4"
+                      "finalista_1 finalista_1 finalista_2 finalista_2"
+                      ". campeon campeon ."
+                      ". enviar enviar .";
+  text-align: center;
+  justify-content: center;
+  align-content: center;
+  justify-items: center;
+  margin: 4% 0;
+} */
+
+
 .grid input{
   width: 100%;
   max-width: 128px;
@@ -468,6 +528,9 @@ margin-left: 10px
     width: 93%;
     font-size: 12px;
   }
+.fase-grupos{
+  display: flex;
+}
 }
 @media screen and (max-width:500px){
  .hamburger-button{
@@ -516,144 +579,14 @@ border-bottom: 1px solid;
   padding-top: 18px;
   font-size: 31px;
   }
-  .grid{
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-areas:"grupoA grupoA grupo2B grupo2B"
-                        "grupoB grupoB grupo2A grupo2A"
-                        "grupoC grupoC grupo2D grupo2D"
-                        "grupoD grupoD grupo2C grupo2C"
-                        "grupoE grupoE grupo2F grupo2F"
-                        "grupoF grupoF grupo2E grupo2E"
-                        "grupoG grupoG grupo2H grupo2H"
-                        "grupoH grupoH grupo2G grupo2G"
-                        "cuartos_1 cuartos_1 cuartos_2 cuartos_2"
-                        "cuartos_3 cuartos_3 cuartos_4 cuartos_4"
-                        "cuartos_5 cuartos_5 cuartos_6 cuartos_6"
-                        "cuartos_7 cuartos_7 cuartos_8 cuartos_8"
-                        "semifinalista_1 semifinalista_1 semifinalista_2 semifinalista_2"
-                        "semifinalista_3 semifinalista_3 semifinalista_4 semifinalista_4"
-                        "finalista_3 finalista_3 finalista_4 finalista_4"
-                        "finalista_1 finalista_1 finalista_2 finalista_2"
-                        ". campeon campeon ."
-                        ". enviar enviar .";
-    text-align: center;
-    justify-content: center;
-    align-content: center;
-    justify-items: center;
-    margin: 4% 0;
-  }
-  .grupoA{
-    grid-area: grupoA;
-  }
-  .grupo2A{
-    grid-area: grupo2A;
-    grid-row-gap: 10px;
-  }
-  .grupoB{
-  grid-area: grupoB;
-  }
-  .grupo2B{
-  grid-area: grupo2B;
-  }
-  .grupoC{
-  grid-area: grupoC;
-  }
-  .grupo2C{
-  grid-area: grupo2C;
-  }
-  .grupoD{
-  grid-area: grupoD;
-  }
-  .grupo2D{
-  grid-area: grupo2D;
-  }
-  .grupoE{
-  grid-area: grupoE;
-  }
-  .grupo2E{
-  grid-area: grupo2E;
-  }
-  .grupoF{
-  grid-area: grupoF;
-  }
-  .grupo2F{
-  grid-area: grupo2F;
-  }
-  .grupoG{
-  grid-area: grupoG;
-  }
-  .grupo2G{
-  grid-area: grupo2G;
-  }
-  .grupoH{
-  grid-area: grupoH;
-  }
-  .grupo2H{
-  grid-area: grupo2H;
-  }
-  .cuartos_1{
-  grid-area: cuartos_1;
-  }
-  .cuartos_2{
-  grid-area: cuartos_2;
-  }
-  .cuartos_3{
-  grid-area: cuartos_3;
-  }
-  .cuartos_4{
-  grid-area: cuartos_4;
-  }
-  .cuartos_5{
-  grid-area: cuartos_5;
-  }
-  .cuartos_6{
-  grid-area: cuartos_6;
-  }
-  .cuartos_7{
-  grid-area: cuartos_7;
-  }
-  .cuartos_8{
-  grid-area: cuartos_8;
-  }
-  .semifinalista_1{
-  grid-area: semifinalista_1;
-  }
-  .semifinalista_2{
-  grid-area: semifinalista_2;
-  }
-  .semifinalista_3{
-  grid-area: semifinalista_3;
-  }
-  .semifinalista_4{
-  grid-area: semifinalista_4;
-  }
-  .finalista_1{
-  grid-area: finalista_1;
-  }
-  .finalista_2{
-  grid-area: finalista_2;
-  }
-  .finalista_3{
-  grid-area: finalista_3;
-  }
-  .finalista_4{
-  grid-area: finalista_4;
-  }
-  .campeon{
-  grid-area: campeon;
-  }
-  .enviar{
-    grid-area: enviar;
-    margin-top: 20px;
-  }
-  .match{
+  /* .match{
     height: 565px;
-  }
-  .match .formulario{
-    margin-top: 41%;
+  } */
+  /* .match .formulario{
+    margin-top: 41%; */
   }
   .partidos{
     margin-left: 0;
   }
+
 }
